--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,309 @@
     />
     <meta property="og:image" content="/jovian_meta.png" />
     <link rel="icon" href="/jovian_favicon.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <div>Navbar</div>
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-md shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img
+            id="logo"
+            alt="Jovian Logo"
+            src="https://i.imgur.com/JRA5Q8a.png"
+            height="30"
+            class="d-md-none"
+          />
+          <img
+            id="logo-with-text"
+            alt="Jovian Logo"
+            src="https://i.imgur.com/m1wXjqw.png"
+            height="30"
+            class="d-none d-md-inline"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                target="_blank"
+                href="https://jovian.com/learn"
+              >
+                Courses
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://jovian.com/learn"
+                target="_blank"
+              >
+                Programs
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://youtube.com/@jovianhq"
+                target="_blank"
+              >
+                YouTube
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="btn btn-primary ms-md-2"
+                href="https://jovian.com/login"
+                role="button"
+                target="_blank"
+              >
+                Sign In
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--ABOUT SECTION-->
+    <div class="container px-4">
+      <div class="row flex-lg-row-reverse align-items-center g-4 py-4">
+        <div class="col-12 col-lg-6">
+          <img
+            src="https://i.imgur.com/sxbxff5.jpg"
+            class="d-block mx-lg-auto img-fluid rounded"
+            loading="lazy"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+            Work at Jovian
+          </h1>
+          <p class="lead">
+            At Jovian, we're on a mission to build the world's most highly
+            reputed technical university, and we're building it completely
+            online. We offer several beginner friendly courses that are taken by
+            300,000+ registered users.
+          </p>
+          <p class="lead">We also offer 2 industry-focused bootcamps:</p>
+          <ol class="lead">
+            <li>
+              <a href="https://www.jovian.com/full-stack-developer-bootcamp">
+                Jovian Full Stack Developer Bootcamp
+              </a>
+            </li>
+            <li>
+              <a href="https://www.jovian.com/data-science-bootcamp">
+                Jovian Data Science Bootcamp
+              </a>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </div>
 
     <div>About Jovian</div>
 
     <div>Jobs List/Table</div>
 
-    <div>Application Form</div>
+    <!--APPLICATION FORM-->
+    <div class="container px-4">
+      <h2 class="text-center mb-4">Submit Your Application</h2>
+      <form
+        class="offset-lg-2 col-lg-8"
+        action="https://formbold.com/s/3wvKl"
+        method="POST"
+        enctype="multipart/form-data"
+      >
+        <!--NAME-->
+        <div class="mb-3 col-sm-6">
+          <label for="fullname" class="form-label"> Full Name </label>
+          <input
+            type="text"
+            class="form-control"
+            name="name"
+            required
+            placeholder="John Doe"
+            id="fullname"
+          />
+        </div>
 
-    <div>Footer</div>
+        <!--EMAIL-->
+        <div class="mb-3 col-sm-6">
+          <label for="email" class="form-label"> Email address </label>
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            placeholder="john@doe.com"
+            id="email"
+            aria-describedby="emailHelp"
+            required
+          />
+          <div id="emailHelp" class="form-text">
+            We'll never share your email with anyone else.
+          </div>
+        </div>
+
+        <!--PHONE-->
+        <div class="mb-3 col-sm-6">
+          <label for="phone" class="form-label">Phone</label>
+          <input
+            type="tel"
+            class="form-control"
+            id="phone"
+            placeholder="+919898989898"
+            name="phone"
+            required
+          />
+        </div>
+
+        <!--DOB-->
+        <div class="mb-3 col-sm-6">
+          <label for="dob" class="form-label">Date of Birth</label>
+          <input
+            type="date"
+            class="form-control"
+            id="phone"
+            name="phone"
+            required
+          />
+        </div>
+
+        <!--POSITION-->
+        <div class="mb-3 col-sm-6">
+          <label for="position" class="form-label">Position Applied For</label>
+          <select class="form-select" aria-label="Default select example">
+            <option selected value="">Select a position</option>
+            <option value="frontend developer">Frontend Developer</option>
+            <option value="full stack developer">Full Stack Developer</option>
+            <option value="data scientist">Data Scientist</option>
+            <option value="ml engineer ">ML Engineer</option>
+          </select>
+        </div>
+
+        <!--RESUME-->
+        <div class="mb-3 col-sm-6">
+          <label for="resume" class="form-label">Upload Resume</label>
+          <input
+            type="file"
+            class="form-control"
+            id="resume"
+            name="resume"
+            required
+          />
+        </div>
+
+        <!--COVER LETTER-->
+        <div class="mb-3">
+          <label for="resume" class="form-label">Cover Letter</label>
+          <textarea
+            placeholder="Why should we consider you for the job?"
+            class="form-control"
+            id="resume"
+            name="resume"
+            rows="5"
+            required
+          ></textarea>
+        </div>
+
+        <!--TERMS-->
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="terms" />
+          <label class="form-check-label" for="terms"
+            >I agree to the terms and coditions.</label
+          >
+        </div>
+
+        <!--SUBMIT BUTTON-->
+        <button type="submit" class="btn btn-primary">
+          Submit Application
+        </button>
+      </form>
+    </div>
+
+    <!--FOOTER-->
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-top pt-3 mb-3">
+          <li class="nav-item">
+            <a
+              href="https://jovian.com/learn"
+              class="nav-link px-2 text-body-secondary"
+              target="_blank"
+            >
+              Courses
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://jovian.com/learn"
+              class="nav-link px-2 text-body-secondary"
+              target="_blank"
+            >
+              Programs
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://youtube.com/@jovianhq"
+              class="nav-link px-2 text-body-secondary"
+              target="_blank"
+            >
+              YouTube
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://jovian.com/login"
+              class="nav-link px-2 text-body-secondary"
+              target="_blank"
+            >
+              Sign In
+            </a>
+          </li>
+        </ul>
+        <p class="text-center text-body-secondary">
+          © 2023 Jovian (SwiftAce Inc.)
+        </p>
+      </footer>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
