make final changes

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,14 @@
           />
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+          <h1
+            class="display-4 fw-bold text-body-emphasis lh-1 mb-3 text-center d-lg-none"
+          >
+            Work at Jovian
+          </h1>
+          <h1
+            class="display-5 fw-bold text-body-emphasis lh-1 mb-3 d-none d-lg-block"
+          >
             Work at Jovian
           </h1>
           <p class="lead">
@@ -147,12 +154,110 @@
       </div>
     </div>
 
-    <div>About Jovian</div>
+    <!--JOBS-->
+    <div class="container px-4 mt-5">
+      <h2 class="text-center mb-4">Job Opportunities</h2>
 
-    <div>Jobs List/Table</div>
+      <!--JOBS LIST-->
+      <div class="d-md-none">
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Frontend Developer</h5>
+            <h6 class="card-subtitle my-1 text-body-secondary">
+              Bengaluru, India • ₹ 12,00,000
+            </h6>
+            <small class="card-text text-body-secondary">
+              Posted Mar 3, 2023
+            </small>
+          </div>
+        </div>
+
+        <div class="card my-4">
+          <div class="card-body">
+            <h5 class="card-title">Full Stack Developer</h5>
+            <h6 class="card-subtitle my-1 text-body-secondary">
+              New Delhi, India • ₹ 12,00,000
+            </h6>
+            <small class="card-text text-body-secondary">
+              Posted Feb 1, 2023
+            </small>
+          </div>
+        </div>
+
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Data Scientist</h5>
+            <h6 class="card-subtitle my-1 text-body-secondary">
+              San Francisco, USA • $175,000
+            </h6>
+            <small class="card-text text-body-secondary">
+              Posted Dec 22, 2022
+            </small>
+          </div>
+        </div>
+
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">ML Engineer</h5>
+            <h6 class="card-subtitle my-1 text-body-secondary">
+              Remote • $80,000
+            </h6>
+            <small class="card-text text-body-secondary">
+              Posted Sep 19, 2022
+            </small>
+          </div>
+        </div>
+      </div>
+
+      <!--JOBS TABLE-->
+      <div class="offset-lg-2 col-lg-8">
+        <table class="d-none d-md-table table table-striped table-bordered">
+          <tr class="table-primary text-center">
+            <th rowspan="2">Job Title</th>
+            <th colspan="2">Location</th>
+            <th rowspan="2">Salary</th>
+            <th rowspan="2">Posted On</th>
+          </tr>
+          <tr class="table-primary text-center">
+            <th>City</th>
+            <th>Country</th>
+          </tr>
+          <tr>
+            <td>Frontend Developer</td>
+            <td>Bengaluru</td>
+            <td>India</td>
+            <td>₹12,00,000</td>
+            <td>Mar 3, 2023</td>
+          </tr>
+
+          <tr>
+            <td>Full Stack Developer</td>
+            <td>New Delhi</td>
+            <td>India</td>
+            <td>₹15,00,000</td>
+            <td>Feb 1, 2023</td>
+          </tr>
+
+          <tr>
+            <td>Data Scientist</td>
+            <td>San Francisco</td>
+            <td>USA</td>
+            <td>$175,000</td>
+            <td>Dec 22, 2022</td>
+          </tr>
+
+          <tr>
+            <td>ML Engineer</td>
+            <td colspan="2">Remote</td>
+            <td>$80,000</td>
+            <td>Sep 19, 2022</td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
     <!--APPLICATION FORM-->
-    <div class="container px-4">
+    <div class="container px-4 mt-5">
       <h2 class="text-center mb-4">Submit Your Application</h2>
       <form
         class="offset-lg-2 col-lg-8"
