fix container lg

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <body>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-md shadow-sm">
-      <div class="container-fluid">
+      <div class="container-lg px-4">
         <a class="navbar-brand" href="/">
           <img
             id="logo"
